# NavierTwin

./: .gitignore  CLAUDE.md  DONE.md  MANIFEST.in  PLAN.md  README.md  ROADMAP.md  SPEC.md  main.py  pyproject.toml  setup.py
.claude/: launch.json  ralph-loop.local.md
.claude/memory/: MEMORY.md  architecture_rules.md  project_overview.md  roadmap_status.md  tech_stack.md
.github/workflows/: ci.yml  electron-package.yml
.omc/plans/: model-taxonomy-plan.md  twin-platform-roadmap.md
.omc/research/: route2-mesh-native-wiring.md
.omc/sessions/: 2026-07-18-v5-platform-session.md
desktop/: __init__.py  qt_app.py
docs/: ELECTRON.md  GUI_TESTING_GUIDE.md  Makefile  WINDOWS_INSTALLER.md
docs/coverage/: coverage_baseline.json  coverage_weak.json
docs/source/: cli.rst  conf.py  customer_workflow.rst  gui.rst  index.rst  installation.rst  overview.rst  quickstart.rst
electron/: main.js  package-lock.json  package.json  preload.js  run.sh  server-launch.js  server-process.js  splash.html
electron/test/: package-config.test.js  server-launch.test.js  server-process.test.js
examples/: burgers_fno.py  cavity_benchmark.py  lbm_rom_pipeline.py  release-metadata.example.json  streaming_burgers_twin.py
installer/: naviertwin.iss  naviertwin.spec
scripts/: benchmark_native_kernels.py  build_feature_pack.py  build_windows_installer.ps1  capture_coverage_baseline.py  check_twin_matrix.py  emit_verification_report.py  installer_smoke.py  make_parametric_steady_dataset.py  make_test_dataset.py  release_smoke.py  sdist_smoke.py  sign_release_metadata.py  verify_all.sh  wheel_smoke.py
src/naviertwin/: __init__.py  (+3 more)
tests/: __init__.py  conftest.py  test_acoustic.py  test_acquisition.py  test_activations.py  test_active_learning_strategies.py  test_adaptive_enrich.py  test_adjoint.py  test_aero_forces.py  test_analyze_panel_advanced_gui.py  test_anisotropy.py  test_anomaly.py  test_anomaly_ae.py  test_anomaly_score.py  test_api_init.py  test_api_operations.py  test_api_server_smoke.py  test_artifact_zip.py  test_async_loader.py  test_atomic_io.py  test_aug_lagrangian.py  test_augmentation.py  test_ausm_plus.py  test_backoff.py  test_batch_evaluation.py  test_batch_predict.py  test_batch_train_cli.py  test_battery_thermal.py  test_bc_values.py  test_bem_turbine.py  test_benchmark.py  test_benchmarks_catalog.py  test_berger_oliger.py  test_bobyqa.py  test_bootstrap.py  test_budget.py  test_calibration.py  test_callbacks.py  test_canonical_cache.py  test_canonical_data_model.py  (+406 more)
(+2423 files in other folders)
